--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   "author": "Antonio Lozano",
   "license": "ISC",
   "dependencies": {
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/sequelize": "^4.28.9",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5",
     "typescript": "^4.1.2"
