--- a/src/config/config.json
+++ b/src/config/config.json
@@ -5,5 +5,6 @@
     "database": "crudOperationsSequelize",
     "host": "127.0.0.1",
     "dialect": "mysql"
-  }
+  },
+  "jwtSecret" : "llevaLaTararaUnVestidoBlancoLlenoDeCascabeles"
 }
