--- a/package.json
+++ b/package.json
@@ -22,10 +22,19 @@
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5",
+    "socket.io": "^3.0.3",
     "typescript": "^4.1.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
     "nodemon": "^2.0.6"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AntonioLoz/crud-sequelize.git"
+  },
+  "bugs": {
+    "url": "https://github.com/AntonioLoz/crud-sequelize/issues"
+  },
+  "homepage": "https://github.com/AntonioLoz/crud-sequelize#readme"
 }
