--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5",
     "socket.io": "^3.0.3",
+    "socketio": "^1.0.0",
     "typescript": "^4.1.2"
   },
   "devDependencies": {
