--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@types/jsonwebtoken": "^8.5.0",
     "@types/sequelize": "^4.28.9",
+    "bcrypt": "^5.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
@@ -27,6 +28,7 @@
     "typescript": "^4.1.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.9",
     "nodemon": "^2.0.6"
   },
